force-app/main/default/objects/RMA__c/RMA__c.object-meta.xml
<CustomObject>
    <description>A Return Materials Authorization is a number associated with the return of a product to stock for inspection or credit.</description>
    <label>RMA</label>
    <nameField>
        <displayFormat>RMR-{0000}</displayFormat>
        <label>RMA Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RMAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>