force-app/main/default/objects/RMA__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <defaultValue>ADDMONTHS( TODAY() ,1)</defaultValue>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>