force-app/main/default/objects/RMA__c/fields/RMA_Status__c.field-meta.xml
<CustomField>
    <fullName>RMA_Status__c</fullName>
    <label>RMA Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>RMA_Status</valueSetName>
    </valueSet>
</CustomField>