force-app/main/default/objects/RMA__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Requested_By__c</columns>
    <columns>Due_Date__c</columns>
    <columns>RMA_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>